# Tradetrack

./: LICENSE  README.md  makefile  project.md  pyproject.toml  requirements.txt  tradetrack.db
.github/ISSUE_TEMPLATE/: final-capstone.md
app/: cli.py  db.py  models.py
tests/: test_inventory.py  test_report.py  test_transactions.py
